--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
 
       <h3><a href='/'>Icebreakers</a></h3>
     </header>
+    <main>
+      <div>
+        <h1>Icebreakers Main Header</h1>
+        <p>This is the paragraph that i need to write</p>
+      </div>
+      <div>
+      </div>
+
+
+      
+    </main>
   </body>
 </html>
