--- a/index.html
+++ b/index.html
@@ -21,5 +21,25 @@
 
       <h3><a href='/'>Icebreakers</a></h3>
     </header>
+    <main>
+      <div>
+        <h1>Icebreakers Main Header</h1>
+        <p>This is the paragraph that i need to write</p>
+      </div>
+      <div>
+        <h4>one</h4>
+        <p>
+          <a href="#">first</a>
+        </p>
+        <h4>two</h4>
+        <p>
+          <a href="#">second</a>
+        </p>
+      </div>
+
+    </main>
+    <footer>
+      <p>The Footer is here</p>
+    </footer>
   </body>
 </html>
